chore(): Add url comments for video processing functions

--- a/StarGAN_application.ipynb
+++ b/StarGAN_application.ipynb
@@ -1378,6 +1378,7 @@
       "source": [
         "# Functie care imparte un video in mai multe frame-uri\n",
         "def get_frames_from_video(filename):\n",
+        "    # Source: https://techtutorialsx.com/2021/04/29/python-opencv-splitting-video-frames/\n",
         "    frames = []\n",
         "    capture = cv.VideoCapture(filename)\n",
         "    while True:\n",
@@ -1392,6 +1393,7 @@
         "\n",
         "# Functie care combina mai multe frame-uri intr-un singur video\n",
         "def combine_frames_to_video(frames, filename):\n",
+        "    # Source: https://theailearner.com/2018/10/15/creating-video-from-images-using-opencv-python/\n",
         "    fourcc = cv.VideoWriter_fourcc(*'MP4V')\n",
         "    size = tuple(frames[0].shape[:-1])\n",
         "    fps = 30\n",
